<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="400dp"
    android:padding="10dp"
    android:layout_gravity="center"
    android:background="#fff">

    <TextView
        android:id="@+id/OrdenarTXT"
        android:text="@string/OrdenarTXT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:gravity="center"/>

    <!-- Uso del Lottie-->
    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        app:lottie_autoPlay="true"
        app:lottie_fileName="ordenar.json"
        app:lottie_imageAssetsFolder="assets"
        app:lottie_loop="true">
    </com.airbnb.lottie.LottieAnimationView>

    <Button
        android:id="@+id/Dos_Columnas"
        android:text="@string/Dos_Columnas"
        android:layout_marginTop="10dp"
        android:textColor="#fff"
        android:background="@drawable/btn_personalizado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/Tres_Columnas"
        android:text="@string/Tres_Columnas"
        android:layout_marginTop="10dp"
        android:textColor="#fff"
        android:background="@drawable/btn_personalizado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</androidx.appcompat.widget.LinearLayoutCompat>