<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".CategoriasAdmin.PeliculasA.AgregarPelicula">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--TXT -->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/NombreTXTPeliculas" />

            <!--Nombre de la imagen -->

            <EditText
                android:id="@+id/NombrePeliculas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/NombrePeliculas"
                android:inputType="textCapWords|textAutoCorrect" />

            <!--Vista -->

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:orientation="horizontal">

                <!--Icono -->

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="25dp"
                    android:layout_height="30dp"
                    android:src="@drawable/vista_ico" />

                <!-- Numero de visitas que se inicializa en 0 -->
                <TextView
                    android:id="@+id/VistaPeliculas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:gravity="center"
                    android:text="@string/VistaPeliculas"
                    android:textSize="20sp" />


            </androidx.appcompat.widget.LinearLayoutCompat>

            <!-- Icono para abrir la galeria -->

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ImagenAgregarPelicula"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:src="@drawable/imagen_ico" />

            <!--Boton para publicar imagen pelicula -->

            <Button
                android:id="@+id/PublicarPelicula"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn_personalizado"
                android:text="@string/PublicarPelicula"
                android:textColor="@color/white" />


        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>